--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -1,30 +1,26 @@
 name: Deploy to Azure
-
 on:
-  push:
-    branches:
-      - main
+    push:
+      branches:
+        - main
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+    deploy:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+        - name: Log in to Azure
+          uses: azure/login@v1
+          with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Login to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Build and Push Docker image to ACR
-      run: |
-        az acr build --registry ${{ vars.AZURE_PREFIX }}acr --image ${{ vars.AZURE_PREFIX }}-image .
-
-    - name: Deploy to Azure Container Apps
-      run: |
-        az containerapp update \
-          --name ${{ vars.AZURE_PREFIX }}containerapp \
-          --resource-group ${{ vars.AZURE_RG }} \
-          --image ${{ vars.AZURE_PREFIX }}acr.azurecr.io/${{ vars.AZURE_PREFIX }}-image:latest
+        - name: Build and deploy Container App
+          uses: azure/container-apps-deploy-action@v1
+          with:
+            appSourcePath: ${{ github.workspace }}
+            acrName: ${{ vars.AZURE_PREFIX }}acr
+            resourceGroup: ${{ vars.AZURE_RG }}
+            containerAppName: ${{ vars.AZURE_PREFIX }}containerapp
+            containerAppEnvironment: ${{ vars.AZURE_PREFIX }}containerappenvironment
